# LTNC_SDL2proj

./: .gitignore  CMakeLists.txt  README.md  game.cpp  main.cpp  vcpkg.json
include/: Game.h  GameObject.h  Gameobject.h  Grid.h  KillTile.h  Map.h  TextureManager.h  game.h  textureManager.h
include/ECS/: Components.h  EntityComponentSystem.h  positionComponent.h  spriteComponent.h
src/: Game.cpp  GameObject.cpp  Grid.cpp  KillTile.cpp  Map.cpp  TextureManager.cpp  game.cpp  gameObject.cpp  main.cpp  textureManager.cpp
